# final-project

./: .gitignore  Cargo.toml  LICENSE  README.md  result.txt
.github/workflows/: release.yml  rust.yml
assets/: ganggangsullae.md
scripts/: build_mac_with_local.sh  build_windows_with_docker.sh  run.sh  server.sh  windows-build.Dockerfile
src/: component.rs  main.rs
src/game_ui/: components.rs  mod.rs  styles.rs
src/game_ui/systems/: interactions.rs  layout.rs  mod.rs
src/system_module/: mod.rs  network.rs  player.rs  score.rs  startup.rs  view.rs
